Creacion de Header

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         </div>
       </nav>
 
+      <header>
+          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorem officiis impedit, aut porro iste maiores necessitatibus incidunt id maxime asperiores quaerat magnam blanditiis vel beatae qui, fuga eaque! Minus, reprehenderit.</p>
+      </header>
+
 
 
 
