--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     
       <header class="header">         
 
-            <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
+            <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
               <div class="container">
               <a class="navbar-brand" href="#"><img src="assets/img/viajes.svg" height="40px" alt="">Viajes Chile</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
                   <li class="nav-item active">
                     <a class="nav-link" href="#Carrusel">Inicio<span class="sr-only">(current)</span></a>
